--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Segoe UI", sans-serif;
+  background-color: #f5f2ef;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main-page {
+  text-align: center;
+  padding: 30px;
+}
+
+.services-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 30px;
+  margin-top: 30px;
+}
+
+.service-card {
+  background-color: #5d4037;
+  color: white;
+  padding: 25px;
+  border-radius: 18px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
+
+.service-card h2 {
+  margin-bottom: 15px;
+  border-bottom: 1px solid #fff;
+  padding-bottom: 8px;
+}
+
+.service-content {
+  background-color: #fdfdfd;
+  color: #333;
+  padding: 20px;
+  border-radius: 12px;
+}
+.services-row {
+  display: flex;
+  justify-content: space-around; /* հավասար տարածություն բոլոր անունների միջև */
+  margin-top: 50px;
+}
+
+.service-item {
+  padding: 10px 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  text-align: center;
+  font-weight: bold;
+}
+.all-services-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  /* justify-content: space-around; */
+  margin-top: 30px;
+}
+
+.service-block {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 8px;
+  width: 300px; /* կամ ուզած չափս */
 }
